tests/errors/assignment_abuses.sad
method a() {
    yield 1
}
a() = 10
